# 42_campus_chronicles

./: .env  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.md  db.sqlite  db.ts  index.ts  package-lock.json  package.json  request.rest  tsconfig.json
.github/workflows/: cmake-cross-platform.yml  cmake-linux-platform.yml  cmake-osx-platform.yml  cmake-win-platform.yml
assets/: RESOURCEINFO.txt
build-tools/: 42cc_resource_compiler.cpp
includes/: engine.hpp  game.hpp  includes.hpp  objects.hpp  resources.hpp  window.hpp
includes/engine/: base_objects.hpp  base_objects_impl.inl  error_handler.hpp  math.hpp
includes/engine/exceptions/: stackexception.hpp
includes/engine/utils/: timelog.hpp
includes/objects/: objects.hpp  player.hpp  wavefront.hpp
prisma/: dev.db  schema.prisma
src/: app.js  functions.ts  game.cpp  index.ts  main.cpp  resources.cpp  window.cpp
src/engine/: engine_base_objects.cpp  error_handler.cpp  math.cpp
src/engine/exceptions/: stackexception.cpp
src/objects/: object.cpp  object3d.cpp  player.cpp  player.hpp  sprite2d.cpp  wavefront.cpp
test/: app.test.js
views/: 404.html
